config: changes to mono

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,6 +6,7 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_LVGL_USE_THEME_MONO=y
 # Logging
 # CONFIG_ZMK_USB_LOGGING=y
 
