--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,8 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_LVGL_USE_THEME_MONO=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # Logging
 # CONFIG_ZMK_USB_LOGGING=y
 
