--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -142,5 +142,13 @@
       layers = <BASE BASE_QWERTY NAV NAV_WORD>;
       bindings = <&num_word>;
     };
+    combo_esc {
+      timeout-ms = <COMBO_TERM_SLOW>;
+      global-quick-tap-ms = <COMBO_GLOBAL_QUICKTAP>;
+
+      key-positions = <LH1 RH1>;
+      layers = <BASE BASE_QWERTY NAV NAV_WORD>;
+      bindings = <&kp ESC>; 
+    }
   };
 };
