--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -89,14 +89,14 @@
       bindings = <&caps_word_capslock >;
     };
 
-    combo_return {
-      timeout-ms = <COMBO_TERM_FAST>;
-      global-quick-tap-ms = <COMBO_GLOBAL_QUICKTAP>;
+    // combo_return {
+    //   timeout-ms = <COMBO_TERM_FAST>;
+    //   global-quick-tap-ms = <COMBO_GLOBAL_QUICKTAP>;
 
-      key-positions = <LH2 LH1 LH0>;
-      layers = <BASE BASE_QWERTY NAV NUM SYM>;
-      bindings = <&kp RET>;
-    };
+    //   key-positions = <LH2 LH1 LH0>;
+    //   layers = <BASE BASE_QWERTY NAV NUM SYM>;
+    //   bindings = <&kp RET>;
+    // };
 
     combo_bspc {
       timeout-ms = <COMBO_TERM_FAST>;
